@@ -2,6 +2,9 @@
 # $Id$
 
 nn-nn-12 - Version 5.1.21
+  - Added new built-in authentication plugin com.mysql.jdbc.authentication.Sha256PasswordPlugin
+    ("sha256_password").
+
   - Fix for Bug#64731, StringUtils.getBytesWrapped throws StringIndexOutOfBoundsException.
 
   - Added new built-in authentication plugin com.mysql.jdbc.authentication.MysqlClearPasswordPlugin
